MM-37556 first commit for testwick chaos mesh CRD

--- a/ui/src/i18n/en.json
+++ b/ui/src/i18n/en.json
@@ -93,6 +93,9 @@
       },
       "gcp": {
         "title": "GCP Fault"
+      },
+      "testwick": {
+        "title": "Test Wick"
       }
     },
     "run": {
@@ -199,7 +202,7 @@
     "event": {
       "uuid": "UUID",
       "namespace": "Namespace",
-      "name": "name",
+      "name": "名称",
       "kind": "Kind",
       "started": "Started",
       "message": "Message"
