--- a/ui/src/i18n/zh.json
+++ b/ui/src/i18n/zh.json
@@ -93,6 +93,9 @@
       },
       "gcp": {
         "title": "GCP 故障"
+      },
+      "testwick": {
+        "title": "Test Wick"
       }
     },
     "run": {
