--- a/ui/src/i18n/en.json
+++ b/ui/src/i18n/en.json
@@ -93,6 +93,9 @@
       },
       "gcp": {
         "title": "GCP Fault"
+      },
+      "testwick": {
+        "title": "Test Wick"
       }
     },
     "run": {
