Add new testwick improvements and merge 2.0.1 chaos mesh

--- a/ui/src/i18n/en.json
+++ b/ui/src/i18n/en.json
@@ -93,9 +93,6 @@
       },
       "gcp": {
         "title": "GCP Fault"
-      },
-      "testwick": {
-        "title": "Test Wick"
       }
     },
     "run": {
@@ -202,7 +199,7 @@
     "event": {
       "uuid": "UUID",
       "namespace": "Namespace",
-      "name": "name",
+      "name": "名称",
       "kind": "Kind",
       "started": "Started",
       "message": "Message"
